--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,8 @@ extends layout
 block body
   div(ng-controller='AppCtrl')
     h2 Hello {{name}}
+    
+
     ul.menu
       li
         a(href='view1') view1
@@ -15,10 +17,17 @@ block body
       | Angular Socket.io seed app: v
       span(app-version)
 
+  tabset
+    tab(heading="view1")
+      div(ng-view)
+    tab(heading="view2")
+      div(ng-view)
+
   script(src='/socket.io/socket.io.js')
   script(src='bower_components/angular/angular.js')
   script(src='bower_components/angular-route/angular-route.js')
   script(src='bower_components/angular-socket-io/socket.js')
+  script(src='bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js')
   script(src='js/app.js')
   script(src='js/services.js')
   script(src='js/controllers.js')
