--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,5 +5,6 @@ html(ng-app="myApp")
     base(href='/')
     title Angular Socket.io Seed App
     link(rel='stylesheet', href='/css/app.css')
+    link(rel='stylesheet', href='/css/bootstrap.min.css')
   body
     block body
